apps.html prepared generally, text information typed

--- a/apps.html
+++ b/apps.html
@@ -76,6 +76,7 @@
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
                             </div>
+                            <div class="apps__page-one-arrow-img"></div>
                         </div>
                         <div class="apps__page-two">
                             <p class="apps__title"><span class="big-letters">amb</span> - ambasady</p>
@@ -83,32 +84,24 @@
 
                             <ul class="apps__specification-table">
                                 <li>
-                                    <span class="big-letters">c</span>ategory:</span>
-                                    Travel
+                                    <span class="big-letters">c</span>ategory: Travel
                                 </li>
-                                <li><span class="big-letters">u</span>pdated:</span>
-                                    23
-                                    March 2014</li>
-                                <li><span class="big-letters">v</span>ersion:</span>
-                                    3.0
+                                <li><span class="big-letters">u</span>pdated: 23 March 2014</li>
+                                <li><span class="big-letters">v</span>ersion: 3.0
                                 </li>
-                                <li><span class="big-letters">s</span>ize:</span>
-                                    30.7
-                                    MB</li>
-                                <li><span class="big-letters">l</span>anguage:</span>
-                                    English</li>
-                                <li><span class="big-letters">d</span>eveloper:</span>
-                                    Paweł Pabisiak</li>
+                                <li><span class="big-letters">s</span>ize: 30.7MB</li>
+                                <li><span class="big-letters">l</span>anguage: English</li>
+                                <li><span class="big-letters">d</span>eveloper: Paweł Pabisiak</li>
                                 <li></li>
-                                <li><span class="big-letters">r</span>ated:</span>
-                                    4+
+                                <li><span class="big-letters">r</span>ated: 4+
                                 </li>
                         </div>
                         <div class="apps__page-three"></div>
                     </div>
 
                     <div class="apps__description-right">
-                        <p><span class="bold-letters">AMB ambasady</span>  - jest aplikacją, która zapewnia dostęp do informacji o polskich placówkach
+                        <p><span class="bold-letters">AMB ambasady</span> - jest aplikacją, która zapewnia dostęp do
+                            informacji o polskich placówkach
                             dyplomatycznych w Europie (telefony, adresy, strony www, orientacyjne mapki położenia
                             placówek).
                         </p>
@@ -121,11 +114,10 @@
                         <p>Updated 15-th February 2012</p>
                         <p>Source: Ministry of Foreign Affairs - www.msz.gov.pl</p>
                         <p class="update-title-compatibility">
-                            <span class="underline-letters"><span
-                                class="big-letters">c</span>ompatibility:</span>
-                        Requires iOS 6.0 or later, Compatible with iPhone, iPad and iPod touch. This app
-                        is optimized for iPhone 5.
-                    
+                            <span class="underline-letters"><span class="big-letters">c</span>ompatibility:</span>
+                            Requires iOS 6.0 or later, Compatible with iPhone, iPad and iPod touch. This app
+                            is optimized for iPhone 5.
+
                         </p>
 
 
@@ -142,6 +134,7 @@
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
                             </div>
+                            <div class="apps__page-one-arrow-img"></div>
                         </div>
                         <div class="apps__page-two">
                             <p class="apps__title"><span class="big-letters">ambus</span> - embassies</p>
@@ -149,32 +142,24 @@
 
                             <ul class="apps__specification-table">
                                 <li>
-                                    <span class="big-letters">c</span>ategory:</span>
-                                    Travel
+                                    <span class="big-letters">c</span>ategory: Travel
                                 </li>
-                                <li><span class="big-letters">u</span>pdated:</span>
-                                    14
-                                    August 2012</li>
-                                <li><span class="big-letters">v</span>ersion:</span>
-                                    1.0
+                                <li><span class="big-letters">u</span>pdated: 14 August 2012</li>
+                                <li><span class="big-letters">v</span>ersion: 1.0
                                 </li>
-                                <li><span class="big-letters">s</span>ize:</span>
-                                    64.2
-                                    MB</li>
-                                <li><span class="big-letters">l</span>anguage:</span>
-                                    English</li>
-                                <li><span class="big-letters">d</span>eveloper:</span>
-                                    Paweł Pabisiak</li>
+                                <li><span class="big-letters">s</span>ize: 64.2MB</li>
+                                <li><span class="big-letters">l</span>anguage: English</li>
+                                <li><span class="big-letters">d</span>eveloper: Paweł Pabisiak</li>
                                 <li></li>
-                                <li><span class="big-letters">r</span>ated:</span>
-                                    4+
+                                <li><span class="big-letters">r</span>ated: 4+
                                 </li>
                         </div>
-                        
+
                     </div>
 
                     <div class="apps__description-right">
-                        <p><span class="bold-letters">AMBUS</span>  - embassies of the United States of America - is an useful and necessary app during
+                        <p><span class="bold-letters">AMBUS</span> - embassies of the United States of America - is an
+                            useful and necessary app during
                             travelling Europe. AMBUS contains several pieces of information about American embassies and
                             consulates (phone numbers, addresses, e-mails, www, basic maps.</p>
                         <p>All informations is implemented inside the app so you do not need to care about (mobile
@@ -187,22 +172,172 @@
                         </p>
                     </div>
                 </div>
+
                 <div class="apps__panel apps__panel-three">
+                    <div class="apps__description-left">
+                        <div class="apps__page-one">
+                            <div class="apps__page-one-img apps__page-one-img--app-three"></div>
+                            <div class="apps__title big-letters">
+                                <p>safe road</p>
+                            </div>
+                            <div class="apps__page-one-arrow-img"></div>
+                        </div>
+                        <div class="apps__page-two">
+                            <p class="apps__title"><span class="big-letters">safe road</span></p>
+                            <hr>
 
+                            <ul class="apps__specification-table">
+                                <li>
+                                    <span class="big-letters">c</span>ategory: Travel
+                                </li>
+                                <li><span class="big-letters">u</span>pdated: 10 September 2012</li>
+                                <li><span class="big-letters">v</span>ersion: 1.0
+                                </li>
+                                <li><span class="big-letters">s</span>ize: 9.2MB</li>
+                                <li><span class="big-letters">l</span>anguage: English</li>
+                                <li><span class="big-letters">d</span>eveloper: Paweł Pabisiak</li>
+                                <li></li>
+                                <li><span class="big-letters">r</span>ated: 4+
+                                </li>
+                        </div>
+
+                    </div>
+                    <div class="apps__description-right">
+                        <p><span class="bold-letters big-letters">safe road</span> - it is an app with collection of the
+                            most important information related with travelling in Europe by car. The app consists a
+                            database with following pieces of information:</p>
+                        <p>- speed limit in built-up area, outside of the area on express and highways;</p>
+                        <p>- necessary equipment that should be in a car;</p>
+                        <p>- information about paid roads;</p>
+                        <p>- additional information about admissible amount of alcohol in blod, main prohibitions and
+                            rules;</p>
+                        <p>- calculator of speed (converter of miles/h to kilometers/h and back).</p>
+                        <p>The app doesn not need internet connection</p>
+                        <p>Updated 10-th September 2012</p>
+                        <p>Sources of information: </p>
+                        <p>- http://honda.pl</p>
+                        <p>- www.regiomoto.pl</p>
+                        <p>- www.pzmtravel.com.pl</p>
+                        <p><span class="underline-letters"><span class="big-letters">r</span>equirements:</span>
+                            Compatible with iPhone 3GS, iPhone 4, iPhone 4s, iPod touch (3rd generation), iPod touch(4th
+                            generation) and iPad Requires iOS 5.0 or later.
+                        </p>
+                    </div>
                 </div>
+
                 <div class="apps__panel apps__panel-four">
+                    <div class="apps__description-left">
+                        <div class="apps__page-one">
+                            <div class="apps__page-one-img apps__page-one-img--app-four"></div>
+                            <div class="apps__title">
+                                <p>AMB-ambasady</p>
+                            </div>
+                            <div class="apps__page-one-arrow-img"></div>
+                        </div>
+                        <div class="apps__page-two">
+                            <p class="apps__title"><span class="big-letters">matematyka</span> - bryły</p>
+                            <hr>
 
+                            <ul class="apps__specification-table">
+                                <li>
+                                    <span class="big-letters">c</span>ategory: Education
+                                </li>
+                                <li><span class="big-letters">u</span>pdated: 25 October 2013</li>
+                                <li><span class="big-letters">v</span>ersion: 2.0
+                                </li>
+                                <li><span class="big-letters">s</span>ize: 5.3MB</li>
+                                <li><span class="big-letters">l</span>anguage: English</li>
+                                <li><span class="big-letters">d</span>eveloper: Paweł Pabisiak</li>
+                                <li></li>
+                                <li><span class="big-letters">r</span>ated: 4+
+                                </li>
+                        </div>
+
+                    </div>
+                    <div class="apps__description-right">
+                        <p><span class="bold-letters">MATEMATYKA - bryły</span> to aplikacja, która pomoże Ci w
+                            obliczeniach dotyczących brył. Zawiera kilkadziesiąt wzorów do obliczania objętości,
+                            powierzchni i dodatkowo pozwala wykonać obliczenia poprzez wpisanie wartości wejściowych</p>
+                        <p>Tablicę, na której umieszczone są wzory, można przesunąć tak aby były one niewidoczne podczas
+                            lekcji ;-) .</p>
+                        <p>Masz problem z zapamiętaniem wzorów, chcesz sprawdzić czy wykonałeś poprawnie obliczenia - to
+                            aplikacja dla Ciebie - całkowicie bez opłat.</p>
+                        <p>Updated 20-th December 2012</p>
+                        <p>Source: US Embassies - http://usembassies.gov.</p>
+                        <p><span class="underline-letters"><span class="big-letters">r</span>equirements:</span>
+                            Compatible with iPhone 3GS, iPhone 4, iPhone 4s, iPhone 5, iPod touch (3rd generation),
+                            iPod touch (4th generation), iPod touch (5th generation)and iPad. Requires iOS 5.0 or later.
+                        </p>
+                    </div>
                 </div>
-                <div class="apps__panel apps__panel-five">
 
+                <div class="apps__panel apps__panel-five">
+                    <div class="apps__description-left apps__description-left--app-five ">
+                        <div class="apps__page-one apps__page-one--app-five">
+                            <div class="apps__page-one-img apps__page-one-img--app-five"></div>
+                            <div class="apps__title">
+                                <p>Unia Europejska Informator</p>
+                            </div>
+                            <div class="apps__page-one-arrow-img"></div>
+                        </div>
+                        <div class="apps__page-two">
+                            <p class="apps__title">Unia Europejska Informator</p>
+                            <hr>
+
+                            <ul class="apps__specification-table">
+                                <li>
+                                    <span class="big-letters">c</span>ategory: Education
+                                </li>
+                                <li><span class="big-letters">u</span>pdated: 25 January 2016</li>
+                                <li><span class="big-letters">v</span>ersion: 2.0
+                                </li>
+                                <li><span class="big-letters">s</span>ize: 8.9MB</li>
+                                <li><span class="big-letters">l</span>anguage:</span>
+                                    English, German, Polish</li>
+                                <li><span class="big-letters">d</span>eveloper:</span>
+                                    Paweł Pabisiak</li>
+                                <li></li>
+                                <li><span class="big-letters">r</span>ated:</span>
+                                    4+
+                                </li>
+                        </div>
+
+                    </div>
+                    <div class="apps__description-right">
+                        <p><span class="bold-letters">European Union Info</span> is an compedium of basic information
+                            connected with European Union (EU). Now you can have answers for unexpected question about
+                            the union countries close at hand. </p>
+                        <p>The compedium contains data about: capital city, total area, population, currency, important
+                            dates and others. Besides that you can find information how UE "works": the structure, the
+                            main roles and you have a posibility to hear the European Union anthem.</p>
+                        <hr>
+                        <p>Unia Info jest aplikacją, informatorem zawierającym podstawowe informacje na temat Unii
+                            Europejskiej. Dzięki tej aplikacji możesz mieć odpowiedzi na niespodziewane pytania
+                            dotyczące Unii zaraz pod ręką. Kompedium zawiera dane państw Unii, takie jak: nazwę stolicy,
+                            liczbę mieszkańców, walutę, ważne daty dotyczące integracji z Uni i inne. Oprócze tego
+                            dowiesz się o historii powstania Unii, jej struktury i zadaniach a nawet posłuchasz hymnu
+                            Unii</p>
+                        <hr>
+                        <p>
+                            What's New in Version 2.0 / co nowego w wersji 2.0 .
+                        </p>
+                        <p>
+                            -aktualizację danych na dzień 01.01.2016 r. / data update (1st January 2016)
+                        </p>
+                        <p>- zmieniony interfejs / the user-interface update</p>
+                        <p>- optmalizację działania dla najnowszych modeli iPhone / ready for the newest models of
+                            iPhones</p>
+                        <p>
+                            updated: 1st January 2016
+                        </p>
+                        <p><span class="underline-letters"><span class="big-letters">c</span>ompatibility:</span>
+                            Compatible with iPhone 3GS, Requires iOS 7.0 or later. Compatible with iPhone, iPad and iPod
+                            touch.
+                        </p>
+                    </div>
                 </div>
             </div>
-
-
-
         </section>
-
-
     </main>
 
     <footer class="footer">
