--- a/apps.html
+++ b/apps.html
@@ -72,7 +72,9 @@
 
                     <div class="apps__description-left">
                         <div class="apps__page-one">
-                            <div class="apps__page-one-img apps__page-one-img--app-one"></div>
+                            <img class="apps__page-one-img apps__page-one-img--app-one" src="./img/AMB_120a.png">
+                            <!-- <div class="apps__page-one-img apps__page-one-img--app-one"></div> -->
+
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
                             </div>
