changed div to img (apps.html), used flex to display page-one

--- a/apps.html
+++ b/apps.html
@@ -78,7 +78,8 @@
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
                             </div>
-                            <div class="apps__page-one-arrow-img"></div>
+                            <img src="/img/arrowd30_47.png" alt="strzałka w dół" class="apps__page-one-arrow-img">
+                            <!-- <div class="apps__page-one-arrow-img"></div> -->
                         </div>
                         <div class="apps__page-two">
                             <p class="apps__title"><span class="big-letters">amb</span> - ambasady</p>
