--- a/apps.html
+++ b/apps.html
@@ -78,7 +78,7 @@
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
                             </div>
-                            <img src="/img/arrowd30_47.png" alt="strzałka w dół" class="apps__page-one-arrow-img">
+                            <img src="/img/arrow_down30.jpg" alt="strzałka w dół" class="apps__page-one-arrow-img">
                             <!-- <div class="apps__page-one-arrow-img"></div> -->
                         </div>
                         <div class="apps__page-two">
