height changed gor arrow

--- a/apps.html
+++ b/apps.html
@@ -72,14 +72,15 @@
 
                     <div class="apps__description-left">
                         <div class="apps__page-one">
-                            <img class="apps__page-one-img apps__page-one-img--app-one" src="./img/AMB_120a.png">
+                            <img class="apps__page-one-img apps__page-one-img--app-one" src="./img/AMB_120a.png" alt="ikona aplikacji">
                             <!-- <div class="apps__page-one-img apps__page-one-img--app-one"></div> -->
 
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
                             </div>
+                            <!-- <div class="arrow"><p>d</p></div> -->
                             <img src="/img/arrow_down_30n.png" alt="strzałka w dół" class="apps__page-one-arrow-img">
-                            <!-- <div class="apps__page-one-arrow-img"></div> -->
+                         
                         </div>
                         <div class="apps__page-two">
                             <p class="apps__title"><span class="big-letters">amb</span> - ambasady</p>
