--- a/apps.html
+++ b/apps.html
@@ -78,8 +78,10 @@
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
                             </div>
-                            <!-- <div class="arrow"><p>d</p></div> -->
-                            <img src="/img/arrow_down_30n.png" alt="strzałka w dół" class="apps__page-one-arrow-img">
+                            <div class="apps__arrow">
+                                <p><i class="fa-solid fa-arrow-down apps__page-one-arrow"></i></p>
+                            </div>
+                            <!-- <img src="/img/arrow_down_30n.png" alt="strzałka w dół" class="apps__page-one-arrow-img"> -->
                          
                         </div>
                         <div class="apps__page-two">
