--- a/apps.html
+++ b/apps.html
@@ -79,7 +79,7 @@
                                 <p>AMB-ambasady</p>
                             </div>
                             <div class="apps__arrow">
-                                <p><i class="fa-solid fa-arrow-down apps__page-one-arrow"></i></p>
+                                <p class="apps__page-one-arrow"><i class="fa-solid fa-arrow-down "></i></p>
                             </div>
                             <!-- <img src="/img/arrow_down_30n.png" alt="strzałka w dół" class="apps__page-one-arrow-img"> -->
                          
