--- a/apps.html
+++ b/apps.html
@@ -72,8 +72,8 @@
 
                     <div class="apps__description-left">
                         <div class="apps__page-one">
-                            <img class="apps__page-one-img apps__page-one-img--app-one" src="./img/AMB_120a.png" alt="ikona aplikacji">
-                            <!-- <div class="apps__page-one-img apps__page-one-img--app-one"></div> -->
+                            <!-- <img class="apps__page-one-img apps__page-one-img--app-one" src="./img/AMB_120a.png" alt="ikona aplikacji"> -->
+                            <div class="apps__page-one-img apps__page-one-img--app-one"></div>
 
                             <div class="apps__title">
                                 <p>AMB-ambasady</p>
@@ -137,10 +137,10 @@
                     <div class="apps__description-left">
                         <div class="apps__page-one">
                             <div class="apps__page-one-img apps__page-one-img--app-two">
-                                
+
                             </div>
                             <div class="apps__title">
-                                <p>AMB-ambasady</p>
+                                <p>AMBUS embassies</p>
                             </div>
 
                             <div class="apps__arrow">
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div class="apps__page-two">
-                            <p class="apps__title"><span class="big-letters">ambus</span> - embassies</p>
+                            <p class="apps__title"><span class="big-letters">ambus</span> embassies</p>
                             <hr>
 
                             <ul class="apps__specification-table">
