--- a/apps.html
+++ b/apps.html
@@ -66,7 +66,7 @@
     <main>
         <section id="home" class="collection wrapper section-one">
             <h1><span class="big-letters">a</span>plikacje</h1>
-
+            <div class="underline__one underline__one--apps"></div>
             <div class="apps">
                 <div class="apps__panel apps__panel-one">
 
