--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <section class="news wrapper">
             <h2> <span>"A</span>plikacje i wiadomości"</h2>
             <!-- <div class="underline"></div> -->
-            <div class="underline-one"></div>
+            <div class="underline__one"></div>
             <div class="news__box news__carousel">
                 <div class="news__cards news__cards--one ">
                     <img class="news__cards--img" src="./img/AMB_120.png" alt="ikona aplikacji ambasady">
