Sections: help and contact added.

--- a/apps.html
+++ b/apps.html
@@ -32,8 +32,8 @@
         <div class="nav__items">
             <a href="./index.html" class="nav__item"><span>h</span>ome</a>
             <a href="" class="nav__item"><span>a</span>plikacje</a>
-            <a href="" class="nav__item"><span>k</span>ontakt</a>
             <a href="" class="nav__item"><span>p</span>omoc</a>
+            <a href="" class="nav__item"><span>k</span>ontakt</a>
         </div>
 
     </nav>
@@ -336,7 +336,7 @@
                             Unii</p>
                         <hr>
                         <p>
-                            What's New in Version 2.0 / co nowego w wersji 2.0 .
+                            Co nowego w wersji 2.0 / What's New in Version 2.0 .
                         </p>
                         <p>
                             -aktualizację danych na dzień 01.01.2016 r. / data update (1st January 2016)
