--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <div class="nav__items">
             <a href="#" class="nav__item"><span>h</span>ome</a>
             <a href="./apps.html" class="nav__item"><span>a</span>plikacje</a>
+            <a href="#help" class="nav__item"><span>p</span>omoc</a>
             <a href="" class="nav__item"><span>k</span>ontakt</a>
-            <a href="" class="nav__item"><span>p</span>omoc</a>
         </div>
 
     </nav>
@@ -62,8 +62,8 @@
 
 
 
-    <main>
-        <section id="home" class="welcome wrapper">
+    <main class="main">
+        <section id="home" class="section welcome wrapper">
 
             <div class="welcome__box">
                 <div class="welcome__text">
@@ -83,8 +83,8 @@
 
         </section>
 
-        <section class="news wrapper">
-            <h2> <span>"A</span>plikacje i wiadomości"</h2>
+        <section class="section news wrapper">
+            <h2> <span class="big-letters">"a</span>plikacje i wiadomości"</h2>
             <!-- <div class="underline"></div> -->
             <div class="underline__one"></div>
             <div class="news__box news__carousel">
@@ -117,10 +117,27 @@
                     <img class="news__cards--img" src="./img/promokody.jpg" alt="ikona aplikacji ambasady">
                     <p class="news__cards--name-one">promokody</p>
                 </div>
+        </section>
 
 
+        <section id="help" class="section help wrapper">
+            <h2 class="help__title">
+                <span class="big-letters">p</span>omoc
+            </h2>
+            <div class="underline__one underline__one--help"></div>
+            <p class="help__info">
+                Szanowni panstwo, wszelkie błedy oraz sugestie dotyczące działania aplikacji proszę  przesyłać drogą mailową.
+            </p>
+        </section>
 
-
+        <section id="contact" class="section contact wrapper">
+            <h2 class="contact__title">
+                <span class="big-letters">k</span>ontakt
+            </h2>
+            <div class="underline__one underline__one--contact"></div>
+            <p class="help__info">
+                Szanowni panstwo, wszelkie błedy oraz sugestie dotyczące działania aplikacji proszę  przesyłać drogą mailową.
+            </p>
         </section>
     </main>
 
