'Pomoc' and 'Kontakt' sections ready (without form to fill in). 'remake-box' done. All project ready for desktop.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
 </head>
 
 <body>
+
+<div class="remake-box">
+    <p>Niniejsza strona jest reaktywacją nieistniejącej strony</p>
+    <p class="remake-box__web">www.itrao.eu</p>
+    <p>pełniącej funkcję support'u. Była to jedna z form pomocy dla użytkowników aplikacji pobranych ze sklepu Apple'a.</p>
+    <button class="remake-box__btn">rozumiem</button>
+</div>
+
+
     <button class="burger-btn mobile-button">
         <div class="burger-btn__box">
             <div class="burger-btn__bars"></div>
@@ -32,7 +41,7 @@
             <a href="#" class="nav__item"><span>h</span>ome</a>
             <a href="./apps.html" class="nav__item"><span>a</span>plikacje</a>
             <a href="#help" class="nav__item"><span>p</span>omoc</a>
-            <a href="" class="nav__item"><span>k</span>ontakt</a>
+            <a href="#contact" class="nav__item"><span>k</span>ontakt</a>
         </div>
 
     </nav>
@@ -135,9 +144,12 @@
                 <span class="big-letters">k</span>ontakt
             </h2>
             <div class="underline__one underline__one--contact"></div>
-            <p class="help__info">
-                Szanowni panstwo, wszelkie błedy oraz sugestie dotyczące działania aplikacji proszę  przesyłać drogą mailową.
+           <div class="contact__box">
+         
+            <p class="contact__info"><i class="fa-regular fa-envelope"></i>
+                mirrorpawel.pabisiak@gmail.com
             </p>
+           </div>
         </section>
     </main>
 
