The hight of the promocode cards fixed, burger btn (mobile) made smaller

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;1,200;1,300;1,400;1,600&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./scss/main.css">
     <script src="https://kit.fontawesome.com/0b971f3444.js" crossorigin="anonymous"></script>
 
 </head>
@@ -99,32 +99,35 @@
             <div class="news__box news__carousel">
                 <div class="news__cards news__cards--one ">
                     <img class="news__cards--img" src="./img/AMB_120.png" alt="ikona aplikacji ambasady">
-                    <p class="news__cards--name-one">amb - ambasady</p>
+                    <p class="news__cards--name-one bold-letters big-letters">amb - ambasady</p>
         
                 </div>
                 <div class="news__cards news__cards--two">
                     <img class="news__cards--img" src="./img/bryly320.png" alt="ikona aplikacji bryły">
-                    <p class="news__cards--name-one">bryły</p>
+                    <p class="news__cards--name-one bold-letters big-letters">bryły</p>
                 </div>
                 <div class="news__cards news__cards--three">
                     <img class="news__cards--img" src="./img/saferoad320.png" alt="ikona aplikacji bryły">
-                    <p class="news__cards--name-one">safe road</p>
+                    <p class="news__cards--name-one bold-letters big-letters">safe road</p>
                 </div>
                 <div class="news__cards news__cards--four">
                     <img class="news__cards--img" src="./img/ambus320.png" alt="ikona aplikacji bryły">
-                    <p class="news__cards--name-one">AMBUS - us embassies</p>
+                    <p class="news__cards--name-one bold-letters big-letters">ambus - us embassies</p>
                 </div>
                 <div class="news__cards news__cards--five">
                     <img class="news__cards--img" src="./img/stadiony320.png" alt="ikona aplikacji bryły">
-                    <p class="news__cards--name-one">stadiony</p>
+                    <p class="news__cards--name-one bold-letters big-letters">stadiony</p>
                 </div>
                 <div class="news__cards news__cards--six">
                     <img class="news__cards--img" src="./img/AMB320.png" alt="ikona aplikacji ambasady">
-                    <p class="news__cards--name-one">amb 3.0 - ambasady</p>
+                    <p class="news__cards--name-one bold-letters big-letters">amb 3.0 - ambasady</p>
                 </div>
                 <div class="news__cards news__cards--seven">
-                    <img class="news__cards--img" src="./img/promokody.jpg" alt="ikona aplikacji ambasady">
-                    <p class="news__cards--name-one">promokody</p>
+                    <div class="news__cards-additional-background">
+                        <img class="news__cards--img" src="./img/promokody.jpg" alt="ikona aplikacji ambasady">
+                        
+                    </div>
+                    <p class="news__cards--name-one bold-letters big-letters">promokody</p>
                 </div>
         </section>
 
