remake-box info put down for mobile version

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="remake-box">
     <p>Niniejsza strona jest reaktywacją nieistniejącej strony</p>
     <p class="remake-box__web">www.itrao.eu</p>
-    <p>pełniącej funkcję support'u. Była to jedna z form pomocy dla użytkowników aplikacji pobranych ze sklepu Apple'a.</p>
+    <p>pełniącej funkcję support'u. Była to jedna z form pomocy dla użytkowników do napisanych przeze mnie aplikacji, pobranych ze sklepu Apple'a.</p>
     <button class="remake-box__btn">rozumiem</button>
 </div>
 
