Arrow button added for page-one and two, only first panel ready

--- a/apps.html
+++ b/apps.html
@@ -76,12 +76,13 @@
                                 <p>AMB-ambasady</p>
                             </div>
                             <div class="apps__arrow">
-                                <p class="apps__page-one-arrow"><i class="fa-solid fa-arrow-down "></i></p>
+                                <button class="apps__page-arrow apps__page-one-arrow--down"><i class="fa-solid fa-arrow-down "></i></button>
                             </div>
                             <!-- <img src="/img/arrow_down_30n.png" alt="strzałka w dół" class="apps__page-one-arrow-img"> -->
 
                         </div>
                         <div class="apps__page-two">
+                            <button class="apps__page-arrow apps__page-one-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
                             <p class="apps__title"><span class="big-letters">amb</span> - ambasady</p>
                             <hr>
 
@@ -141,10 +142,11 @@
                             </div>
 
                             <div class="apps__arrow">
-                                <p class="apps__page-one-arrow"><i class="fa-solid fa-arrow-down "></i></p>
+                                <button class="apps__page-arrow apps__page-one-arrow--down"><i class="fa-solid fa-arrow-down "></i></button>
                             </div>
                         </div>
                         <div class="apps__page-two">
+                            <button class="apps__page-arrow apps__page-one-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
                             <p class="apps__title"><span class="big-letters">ambus</span> embassies</p>
                             <hr>
 
@@ -189,7 +191,7 @@
                                 <p>safe road</p>
                             </div>
                             <div class="apps__arrow">
-                                <p class="apps__page-one-arrow"><i class="fa-solid fa-arrow-down "></i></p>
+                                <button class="apps__page-arrow apps__page-one-arrow--down"><i class="fa-solid fa-arrow-down "></i></button>
                             </div>
                         </div>
                         <div class="apps__page-two">
@@ -243,7 +245,7 @@
                                 <p>AMB-ambasady</p>
                             </div>
                             <div class="apps__arrow">
-                                <p class="apps__page-one-arrow"><i class="fa-solid fa-arrow-down "></i></p>
+                                <button class="apps__page-arrow apps__page-one-arrow--down"><i class="fa-solid fa-arrow-down "></i></button>
                             </div>
                         </div>
                         <div class="apps__page-two">
@@ -291,7 +293,7 @@
                                 <p>Unia Europejska Informator</p>
                             </div>
                             <div class="apps__arrow">
-                                <p class="apps__page-one-arrow"><i class="fa-solid fa-arrow-down "></i></p>
+                                <button class="apps__page-arrow apps__page-one-arrow--down"><i class="fa-solid fa-arrow-down "></i></button>
                             </div>
                         </div>
                         <div class="apps__page-two">
@@ -363,7 +365,7 @@
 
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="./js/slick_settings.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="./js/scriptAppsPage.js"></script>
 </body>
 
 </html>
