--- a/apps.html
+++ b/apps.html
@@ -82,7 +82,7 @@
 
                         </div>
                         <div class="apps__page-two">
-                            <button class="apps__page-arrow apps__page-one-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
+                            <button class="apps__page-arrow apps__page-two-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
                             <p class="apps__title"><span class="big-letters">amb</span> - ambasady</p>
                             <hr>
 
@@ -142,11 +142,11 @@
                             </div>
 
                             <div class="apps__arrow">
-                                <button class="apps__page-arrow apps__page-one-arrow--down"><i class="fa-solid fa-arrow-down "></i></button>
+                                <button class="apps__page-arrow apps__page-one-arrow--down btn-panel-two"><i class="fa-solid fa-arrow-down "></i></button>
                             </div>
                         </div>
                         <div class="apps__page-two">
-                            <button class="apps__page-arrow apps__page-one-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
+                            <button class="apps__page-arrow apps__page-two-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
                             <p class="apps__title"><span class="big-letters">ambus</span> embassies</p>
                             <hr>
 
@@ -195,6 +195,7 @@
                             </div>
                         </div>
                         <div class="apps__page-two">
+                            <button class="apps__page-arrow apps__page-two-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
                             <p class="apps__title"><span class="big-letters">safe road</span></p>
                             <hr>
 
@@ -249,6 +250,7 @@
                             </div>
                         </div>
                         <div class="apps__page-two">
+                            <button class="apps__page-arrow apps__page-two-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
                             <p class="apps__title"><span class="big-letters">matematyka</span> - bryły</p>
                             <hr>
 
@@ -297,6 +299,7 @@
                             </div>
                         </div>
                         <div class="apps__page-two">
+                            <button class="apps__page-arrow apps__page-two-arrow--up"><i class="fa-solid fa-arrow-up "></i></button>
                             <p class="apps__title">Unia Europejska Informator</p>
                             <hr>
 
