Added: link to apps.html above carousel, remake-box position changed to fixed

--- a/index.html
+++ b/index.html
@@ -129,6 +129,9 @@
                     </div>
                     <p class="news__cards--name-one bold-letters big-letters">promokody</p>
                 </div>
+
+            </div>
+                <a href="./apps.html" class="news__links">Zobacz w dziale aplikacji</a>
         </section>
 
 
