added classes for nav (nav-mobile__apps) and changed padding for collection (collection__apps)

--- a/apps.html
+++ b/apps.html
@@ -37,9 +37,9 @@
 
     </nav>
 
-    <nav class="nav-mobile">
+    <nav class="nav-mobile nav-mobile__apps">
         <div class="nav__items nav-mobile__items">
-            <a href=".index.html" class="nav__item nav-mobile__item"><span>h</span>ome</a>
+            <a href="index.html" class="nav__item nav-mobile__item"><span>h</span>ome</a>
             <a href="" class="nav__item nav-mobile__item"><span>a</span>plikacje</a>
         </div>
     </nav>
@@ -61,7 +61,7 @@
 
 
     <main>
-        <section id="home" class="collection wrapper section-one">
+        <section id="home" class="collection collection__apps wrapper section-one">
             <h1><span class="big-letters">a</span>plikacje</h1>
             <div class="underline__one underline__one--apps"></div>
             <div class="apps">
