Changed the way of e-mail displaying in index.html. I used DBase64 encoding for hiding the e-mail address.

--- a/index.html
+++ b/index.html
@@ -152,8 +152,7 @@
             <div class="underline__one underline__one--contact"></div>
            <div class="contact__box">
          
-            <p class="contact__info"><i class="fa-regular fa-envelope"></i>
-                mirrorpawel.pabisiak@gmail.com
+            <p class="contact__info">
             </p>
            </div>
         </section>
