Invalid names of classes fixed

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
             <div class="welcome__box">
                 <div class="welcome__text">
-                    <p class="welcome__text--item1"><span>w</span>itajcie !</p>
-                    <p class="welcome__text--item2"> Serdecznie witam na stronie itrao.
+                    <p class="welcome__text--item-one"><span>w</span>itajcie !</p>
+                    <p class="welcome__text--item-two"> Serdecznie witam na stronie itrao.
                         Strona ta poświęcona jest aplikacjom, które można zakupić w Apple Store. Znajdziecie tu
                         informacje na temat aplikacji, najnowsze informacje dotyczące uaktualnień oraz "promo kody".
 
@@ -86,7 +86,7 @@
                         w aplikacjach - koniecznie wyślijcie maila (MENU -> Kontakt).
 
                         Mam nadzieję, że używanie aplikacji będzie dla Was przyjemnością</p>
-                    <p class="welcome__text--item3">Paweł Pabisiak</p>
+                    <p class="welcome__text--item-three">Paweł Pabisiak</p>
                 </div>
             </div>
 
